# youtube-to-mp3-bydevie

./: .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: tests.yml
src/yt_links_mp3/: cache.py  cli.py  config.py  downloader.py  linklist.py  logging.py  metadata.py  paths.py  progress.py
tests/: test_cache.py  test_cli.py  test_config.py  test_downloader.py  test_linklist.py  test_metadata.py  test_paths.py
